@@ -1,7 +1,5 @@
 package com.envyful.api.config.type;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Maps;
 import org.spongepowered.configurate.objectmapping.ConfigSerializable;
 
 import java.util.Arrays;
@@ -57,7 +55,7 @@ public class PaginatedConfigInterface extends ConfigInterface {
         private String title;
         private int height = 6;
         private FillType fillType = FillType.BLOCK;
-        private Map<String, ConfigItem> fillerItems = Maps.newHashMap(ImmutableMap.of("one", ConfigItem.builder().type("minecraft:black_stained_glass_pane").amount(1).name(" ").build()));
+        private Map<String, ConfigItem> fillerItems = Map.of("one", ConfigItem.builder().type("minecraft:black_stained_glass_pane").amount(1).name(" ").build());
         private List<Integer> positions = List.of(
                 0, 1, 2, 3, 4, 5, 6, 7, 8,
                 9, 10, 11, 12, 13, 14, 15, 16, 17,
